dbeaver/dbeaver#37929 Fixes based on code review feedback